--- a/package.json
+++ b/package.json
@@ -1,35 +1,11 @@
 {
-  "dependencies": {
-    "dotenv": "^16.3.1",
-    "ics": "^3.5.0",
-    "node-cron": "^3.0.2",
-    "node-xlsx": "^0.23.0",
-    "rss-parser": "^3.13.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.6.3",
-    "@types/node-cron": "^3.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "main": "src/index.ts",
-  "name": "pk-plan",
-  "private": true,
-  "scripts": {
-    "build": "tsc",
-    "lint": "eslint . --ext .tsc",
-    "serve": "nodemon",
-    "start": "npm run build && node dist/index.js"
-  },
-  "version": "1.0.0"
+  "author": "",
+  "name": "pk_plan",
+  "description": "",
+  "license": "",
+  "version": "1.0.0",
+  "workspaces": [
+    "pk_plan-client",
+    "pk_plan-server"
+  ]
 }
