--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": false,
+    "baseUrl": "src",
     "forceConsistentCasingInFileNames": true,
     "lib": [
       "es2022"
@@ -17,7 +18,7 @@
     "target": "ES2022"
   },
   "exclude": [
-    "node_modules",
+    "node_modules"
   ],
   "include": [
     "src"
