--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "node-cron": "^3.0.2",
+    "node-xlsx": "^0.23.0",
     "rss-parser": "^3.13.0"
   },
   "devDependencies": {
