--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^16.3.1",
+    "ics": "^3.5.0",
     "node-cron": "^3.0.2",
     "node-xlsx": "^0.23.0",
     "rss-parser": "^3.13.0"
