--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": false,
-    "baseUrl": "src",
+    "baseUrl": "./src",
     "forceConsistentCasingInFileNames": true,
     "lib": [
       "es2022"
@@ -22,5 +22,10 @@
   ],
   "include": [
     "src"
-  ]
+  ],
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ]
+  }
 }
