--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": false,
+    "baseUrl": "src",
     "forceConsistentCasingInFileNames": true,
     "lib": [
       "es2022"
@@ -11,6 +12,11 @@
     "noImplicitAny": true,
     "noUncheckedIndexedAccess": true,
     "outDir": "dist",
+    "paths": {
+      "@types": [
+        "types"
+      ]
+    },
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
