--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "main": "src/index.ts",
+  "main": "src/main.ts",
   "name": "pk-plan",
   "private": true,
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc -w",
-    "lint": "eslint . --ext .tsc",
-    "start": "npm run build && node -r tsconfig-paths/register dist/index.js",
+    "lint": "eslint -c .eslintrc.json --ext .ts src/",
+    "start": "npm run build && node -r tsconfig-paths/register dist/main.js",
     "start:watch": "nodemon"
   },
   "version": "1.0.0"
