--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "tsc",
     "build:watch": "tsc -w",
     "lint": "eslint -c .eslintrc.json --ext .ts src/",
-    "start": "npm run build && node -r tsconfig-paths/register dist/main.js",
+    "start": "npm run build && TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/main.js",
     "start:watch": "nodemon"
   },
   "version": "1.0.0"
