--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
   "private": true,
   "scripts": {
     "build": "tsc",
-    "lint": "eslint . --ext .tsc",
-    "serve": "nodemon",
-    "start": "npm run build && node dist/index.js"
+    "build:watch": "tsc -w",
+    "lint": "eslint -c .eslintrc.json --ext .ts src/",
+    "start": "npm run build && TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/main.js",
+    "start:watch": "nodemon"
   },
   "version": "0.5.3"
 }
