--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
     "start": "npm run build && TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/main.js",
     "start:watch": "nodemon"
   },
-  "version": "0.5.3"
+  "version": "0.6.0-0"
 }
