--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "ics": "^3.5.0",
     "node-cron": "^3.0.2",
     "node-ssh": "^13.1.0",
-    "node-xlsx": "^0.4.0",
     "rss-parser": "^3.13.0",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "description": "",
   "devDependencies": {
@@ -25,14 +25,13 @@
     "@types/node-cron": "^3.0.8",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   },
   "keywords": [],
   "license": "GPL-3.0-or-later",
-  "main": "src/index.ts",
+  "main": "src/main.ts",
   "name": "@pk/plan",
   "private": true,
   "repository": {
