--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "serve": "turbo serve",
     "typecheck": "turbo typecheck"
   },
-  "version": "1.1.0",
+  "version": "2.0.0-0",
   "workspaces": [
     "apps/*",
     "packages/*"
