--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -4,7 +4,7 @@
     "@pk/utils": "*"
   },
   "devDependencies": {
-    "@pk/tsconfig": "*",
+    "@pk/ts-config": "*",
     "vite": "^6.2.0"
   },
   "name": "@pk/ui",
