--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "@pk/tsconfig": "*"
+    "@pk/ts-config": "*"
   },
   "exports": {
     "./event.js": "./src/event.ts"
