--- a/biome.json
+++ b/biome.json
@@ -39,7 +39,10 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "all": true
+      "all": true,
+      "correctness": {
+        "noUndeclaredDependencies": "off"
+      }
     }
   },
   "organizeImports": {
