feat: request validation

--- a/biome.json
+++ b/biome.json
@@ -42,6 +42,9 @@
       "all": true,
       "correctness": {
         "noUndeclaredDependencies": "off"
+      },
+      "style": {
+        "useNamingConvention": "off"
       }
     }
   },
