feat | [14] Group model (#18)

--- a/biome.json
+++ b/biome.json
@@ -39,7 +39,13 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "all": true
+      "all": true,
+      "correctness": {
+        "noUndeclaredDependencies": "off"
+      },
+      "style": {
+        "useNamingConvention": "off"
+      }
     }
   },
   "organizeImports": {
