--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,9 +1,14 @@
 {
   "devDependencies": {
-    "@pk/tsconfig": "*"
+    "@pk/ts-config": "*"
   },
   "exports": {
-    "./event.js": "./src/event.ts"
+    "./api.js": "./src/api.ts",
+    "./event.js": "./src/event.ts",
+    "./fieldOfStudy.js": "./src/fieldOfStudy.ts",
+    "./group.js": "./src/group.ts",
+    "./helpers.js": "./src/helpers.ts",
+    "./valueValidator.js": "./src/valueValidator.ts"
   },
   "name": "@pk/types",
   "scripts": {
