--- a/apps/timetable-parser-service/package.json
+++ b/apps/timetable-parser-service/package.json
@@ -1,11 +1,16 @@
 {
   "dependencies": {
+    "@pk/timetable-parser-core": "*",
     "@pk/types": "*",
-    "@pk/utils": "*"
+    "@pk/utils": "*",
+    "ics": "^3.5.0",
+    "node-cron": "^3.0.2",
+    "node-ssh": "^13.1.0"
   },
   "devDependencies": {
     "@pk/ts-config": "*",
-    "@types/node": "^22.13.9"
+    "@types/node": "^22.13.9",
+    "@types/node-cron": "^3.0.8"
   },
   "main": "src/main.ts",
   "name": "@pk/timetable-parser-service",
