--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@pk/ts-config/src/tsconfig.lib.json",
+  "compilerOptions": {
+    "allowImportingTsExtensions": true
+  },
   "include": [
     "src"
   ]
