refactor: @pk/timetable-parser-core

--- a/packages/timetable-parser-core/package.json
+++ b/packages/timetable-parser-core/package.json
@@ -9,14 +9,19 @@
     "@pk/ts-config": "*",
     "@types/node": "^22.13.9"
   },
-  "main": "src/main.ts",
+  "exports": {
+    "./classInfo.js": "./src/types/classInfo.ts",
+    "./XlsBufferReaderStream.js": "./src/components/XlsBufferReaderStream.ts",
+    "./XlsScheduleDownloader.js": "./src/components/XlsScheduleDownloader.ts",
+    "./XlsScheduleParserStream.js": "./src/components/XlsScheduleParser/XlsScheduleParserStream.ts",
+    "./ObjectCollectorStream.js": "./src/components/ObjectCollectorStream.ts"
+  },
   "name": "@pk/timetable-parser-core",
   "private": true,
   "scripts": {
     "build": "tsc",
     "lint": "biome check",
     "lint:fix": "biome check --write",
-    "serve": "node --experimental-strip-types --watch src/main.ts",
     "typecheck": "tsc --noEmit"
   },
   "type": "module"
