refactor | [15] Timetable parser (#20)

--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@pk/ts-config/src/tsconfig.lib.json",
-  "include": [
-    "src"
-  ]
+  "compilerOptions": {
+    "allowImportingTsExtensions": true
+  },
+  "include": ["src"]
 }
