refactor: value validator

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,18 +12,20 @@
     "./Logger/LoggerConsoleTransport.js": "./src/Logger/LoggerConsoleTransport.ts",
     "./Logger/types.js": "./src/Logger/types.ts",
     "./regexes/email.js": "./src/regexes/email.ts",
+    "./regexes/password.js": "./src/regexes/password.ts",
+    "./valueValidator/isDate.js": "./src/valueValidator/isDate.ts",
+    "./valueValidator/isEmpty.js": "./src/valueValidator/isEmpty.ts",
+    "./valueValidator/isGreaterOrEqualThan.js": "./src/valueValidator/isGreaterOrEqualThan.ts",
+    "./valueValidator/isLessOrEqualThan.js": "./src/valueValidator/isLessOrEqualThan.ts",
+    "./valueValidator/isMatching.js": "./src/valueValidator/isMatching.ts",
+    "./valueValidator/isNumber.js": "./src/valueValidator/isNumber.ts",
+    "./valueValidator/isString.js": "./src/valueValidator/isString.ts",
+    "./valueValidator/isUUID.js": "./src/valueValidator/isUUID.ts",
+    "./valueValidator/not.js": "./src/valueValidator/not.ts",
+    "./valueValidator/optional.js": "./src/valueValidator/optional.ts",
+    "./cookies.js": "./src/cookies.ts",
     "./exhaustiveCheck.js": "./src/exhaustiveCheck.ts",
-    "./isDate.js": "./src/isDate.ts",
-    "./isEmpty.js": "./src/isEmpty.ts",
-    "./isGreaterOrEqualThan.js": "./src/isGreaterOrEqualThan.ts",
-    "./isLessOrEqualThan.js": "./src/isLessOrEqualThan.ts",
-    "./isMatching.js": "./src/isMatching.ts",
-    "./isNumber.js": "./src/isNumber.ts",
-    "./isString.js": "./src/isString.ts",
-    "./isUUID.js": "./src/isUUID.ts",
-    "./noop.js": "./src/noop.ts",
-    "./not": "./src/not.ts",
-    "./optional.js": "./src/optional.ts"
+    "./noop.js": "./src/noop.ts"
   },
   "name": "@pk/utils",
   "scripts": {
