feat: Calendar model and controller

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,9 +16,11 @@
     "./regexes/email.js": "./src/regexes/email.ts",
     "./regexes/password.js": "./src/regexes/password.ts",
     "./valueValidator/isArrayOf.js": "./src/valueValidator/isArrayOf.ts",
+    "./valueValidator/isBoolean.js": "./src/valueValidator/isBoolean.ts",
     "./valueValidator/isDate.js": "./src/valueValidator/isDate.ts",
     "./valueValidator/isEmpty.js": "./src/valueValidator/isEmpty.ts",
     "./valueValidator/isGreaterOrEqualThan.js": "./src/valueValidator/isGreaterOrEqualThan.ts",
+    "./valueValidator/isMapMatching.js": "./src/valueValidator/isMapMatching.ts",
     "./valueValidator/isLessOrEqualThan.js": "./src/valueValidator/isLessOrEqualThan.ts",
     "./valueValidator/isMatching.js": "./src/valueValidator/isMatching.ts",
     "./valueValidator/isNumber.js": "./src/valueValidator/isNumber.ts",
