--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -19,11 +19,14 @@
     "./valueValidator/isBoolean.js": "./src/valueValidator/isBoolean.ts",
     "./valueValidator/isDate.js": "./src/valueValidator/isDate.ts",
     "./valueValidator/isEmpty.js": "./src/valueValidator/isEmpty.ts",
+    "./valueValidator/isEqual.js": "./src/valueValidator/isEqual.ts",
     "./valueValidator/isGreaterOrEqualThan.js": "./src/valueValidator/isGreaterOrEqualThan.ts",
     "./valueValidator/isMapMatching.js": "./src/valueValidator/isMapMatching.ts",
     "./valueValidator/isLessOrEqualThan.js": "./src/valueValidator/isLessOrEqualThan.ts",
     "./valueValidator/isMatching.js": "./src/valueValidator/isMatching.ts",
+    "./valueValidator/isNull.js": "./src/valueValidator/isNull.ts",
     "./valueValidator/isNumber.js": "./src/valueValidator/isNumber.ts",
+    "./valueValidator/isOneOf.js": "./src/valueValidator/isOneOf.ts",
     "./valueValidator/isString.js": "./src/valueValidator/isString.ts",
     "./valueValidator/isUUID.js": "./src/valueValidator/isUUID.ts",
     "./valueValidator/not.js": "./src/valueValidator/not.ts",
