feat: add ScheduleService

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -33,6 +33,7 @@
     "./valueValidator/optional.js": "./src/valueValidator/optional.ts",
     "./cookies.js": "./src/cookies.ts",
     "./exhaustiveCheck.js": "./src/exhaustiveCheck.ts",
+    "./keyBy.js": "./src/keyBy.ts",
     "./noop.js": "./src/noop.ts"
   },
   "name": "@pk/utils",
