feat: add README

--- a/biome.json
+++ b/biome.json
@@ -6,12 +6,14 @@
       "apps/**/*.js",
       "apps/**/*.jsx",
       "apps/**/*.json",
+      "apps/**/*.md",
       "apps/**/*.ts",
       "apps/**/*.tsx",
       "packages/**/*.css",
       "packages/**/*.js",
       "packages/**/*.jsx",
       "packages/**/*.json",
+      "packages/**/*.md",
       "packages/**/*.ts",
       "packages/**/*.tsx",
       "*.js",
