--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,10 @@ services:
       context: .
       dockerfile: ./docker/database/Dockerfile
     environment:
-      POSTGRES_DB: pk
-      POSTGRES_PASSWORD: zaq1@WSX # todo: use env variable instead of hardcoded value
-      POSTGRES_USER: pk-admin
+      - POSTGRES_DB=pk
+      - POSTGRES_PASSWORD=zaq1@WSX # todo: use env variable instead of hardcoded value
+      - POSTGRES_USER=pk-admin
+      - TZ=CET
     healthcheck:
       interval: 10s
       retries: 5
@@ -38,6 +39,7 @@ services:
       - PG_PORT=6000
       - PG_USER=pk-admin # todo: use env variable instead of hardcoded value
       - SCHEDULE_SERVICE_ON=true
+      - TZ=CET
     healthcheck:
       interval: 10s
       retries: 3
@@ -59,6 +61,8 @@ services:
           path: ./apps/ui
         - action: rebuild
           path: ./packages
+    environment:
+      - TZ=CET
     healthcheck:
       interval: 10s
       retries: 3
