--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,10 @@ services:
     build:
       context: .
       dockerfile: ./docker/database/Dockerfile
+    env_file:
+      - .env
     environment:
       - POSTGRES_DB=pk
-      - POSTGRES_PASSWORD=zaq1@WSX # todo: use env variable instead of hardcoded value
       - POSTGRES_USER=pk-admin
       - TZ=CET
     healthcheck:
@@ -31,13 +32,12 @@ services:
           path: ./apps/server
         - action: rebuild
           path: ./packages
+    env_file:
+      - .env
     environment:
-      - AUTH_SEED=mWJTZJjMnykgFdeXmpNFzL5VZF4EW2KdaQ9nvhdMQewZp2dHiSYJFYVxpyvFixeg # todo: use env variable instead of hardcoded value
-      - AUTH_ADMIN_PASSWORD=q # todo: use env variable instead of hardcoded value
       - PG_HOST=database
-      - PG_PASSWORD=zaq1@WSX # todo: use env variable instead of hardcoded value
       - PG_PORT=6000
-      - PG_USER=pk-admin # todo: use env variable instead of hardcoded value
+      - PG_USER=pk-admin # todo: change to pk-calendar-server
       - SCHEDULE_SERVICE_ON=true
       - TZ=CET
     healthcheck:
@@ -61,6 +61,8 @@ services:
           path: ./apps/ui
         - action: rebuild
           path: ./packages
+    env_file:
+      - .env
     environment:
       - TZ=CET
     healthcheck:
