fix: fonts and color scheme

--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fontsource/ubuntu": "^5.2.5",
     "@pk/types": "*",
     "@pk/utils": "*",
     "material-icons": "^1.13.14"
